# IrisDev

./: .gitignore  .gitmodules  CMakeLists.txt  IrisDev.code-workspace  LICENSE  PreLoad.cmake  README.md
prj/: iris_physical_prj.hpp  iris_session_prj.hpp  iris_transport_prj.hpp
scripts/: build_app.sh  build_grpc.sh  build_proto.sh  env_setup.sh
src/: CMakeLists.txt  Iris.proto  grpc_application.cpp  net_pipe.cpp  net_pipe.hpp  test_driver.cpp  test_driver.hpp  test_server.cpp  test_service.cpp  test_service.hpp
src/integration/: netif.cpp  netif.hpp  osal.cpp
tests/: fixtures.py  test_grpc_api.py
tests/drivers/: client.py  exe.py
